Fixed Facebook Login, Restaurant Names alignments

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1597,8 +1597,7 @@ margin-bottom: 20px;
 }
 
 .progress-table .country {
-  margin-left: 25px;
-    text-align: right;
+  margin-left: 40px;
   width: 28.07%;
 }
 
